/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "AVStreamTypeEnum.proto";
import "AudioTypeEnum.proto";
import "AudioConfigData.proto";
import "VideoConfigData.proto";

message AVChannel {
  required AVStreamType.Enum stream_type = 1;
  optional AudioType.Enum audio_type = 2;
  repeated AudioConfig audio_configs = 3;
  repeated VideoConfig video_configs = 4;
  optional bool available_while_in_call = 5;
}
